fix markdown rendering bug and adjust line height/list spacing issues in safari

--- a/src/styles/base/type.css
+++ b/src/styles/base/type.css
@@ -112,6 +112,10 @@ p {
 	max-width: 60ch;
 }
 
+li + li {
+	margin-top: 1em;
+}
+
 a {
 	--underline-w: 0.125em;
 	--underline-offset: 0.08em;
